<resources>
    <string name="app_name">UniRide</string>
    <string name="uniRide_driver">UniRide - Driver</string>
    <string name="uniRide_passenger">UniRide - Passenger</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="uniide_driver">UniRide-Driver</string>
    <string name="create_trip">Create Trip</string>
    <string name="saved_trip">saved trip</string>
    <string name="passenger">Passenger</string>
    <string name="upcoming_trip">Upcoming trip</string>
    <string name="earnings">Earnings</string>
    <string name="booked_trips">Booked Trips</string>
    <string name="saved_trips">Saved Trips</string>
    <string name="trip_history">Trip History</string>
    <string name="options">Options</string>
    <string name="home_to_university">Home To University</string>
    <string name="university_to_home">University To Home</string>
    <string name="driver">Driver</string>
    <string name="backButton"><![CDATA[<]]></string>
    <string name="please_enter_trip_details">Please enter trip details:</string>
    <string name="date_dd_mm_yy">Date DD/MM/YY:</string>
    <string name="please_enter_the_trip_date">Please enter the trip Date</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="dd_mm_yy">DD/MM/YYYY</string>
    <string name="buttonHistory1">SHOW ROUTE</string>
    <string name="buttonHistory2">MESSAGE DRIVER</string>
    <string name="HistoryHeader">History</string>
    <string name="historyDate">Date</string>
    <string name="historyDriver">Driver: </string>
    <string name="historyPickup">Pickup Time: </string>
    <string name="historyETA">ETA</string>
    <string name="historyNumOfPsg">No. of passengers: </string>
    <string name="search_for_trips">Search for Trips</string>
    <string name="fastest">Fastest</string>
    <string name="earliest">Earliest</string>
    <string name="filter_by">Filter By:</string>
    <string name="cheapest">Cheapest</string>
    <string name="_00_00am">00:00AM</string>
    <string name="time_to_arrive_at_uni_by">Time to Arrive at Uni by:</string>
    <string name="please_enter_desired_trip_details">Please enter desired trip details:</string>
    <string name="are_you_a_passenger_or_driver">Are you a passenger or driver...</string>
    <string name="price">Price:</string>
    <string name="price0">0</string>
    <string name="car_make_and_model">Car make and model:</string>
    <string name="please_enter_your_car_make_and_model">Please enter your car make and model</string>
    <string name="confirm">Confirm</string>
    <string name="estimated_arrival_time">Estimated arrival time</string>
    <string name="trip_confirmation">Trip Confirmation</string>
    <string name="_0">0</string>
    <string name="maximum_passenger">Maximum Passenger</string>
    <string name="enter_the_number_of_passenger_you_can_take">Enter the number of passenger you can take</string>
    <string name="title_activity_options">Options</string>
    <string name="list_of_trips">List of Trips</string>
    <string name="facebook_app_id">1209249802615836</string>
    <string name="fb_login_protocol_scheme">fb1209249802615836</string>
    <string name="history_title">History</string>
    <string name="history_back_button"><![CDATA[<]]></string>
    <string name="history_trip_date">Date</string>
    <string name="history_driver">Driver:</string>
    <string name="history_pickUpTime">Pickup time:</string>
    <string name="history_ETA">ETA to Destination:</string>
    <string name="history_num_of_passengers">No. of Passengers:</string>
    <string name="history_driver_name" />
    <string name="history_pickUpTime_view" />
    <string name="history_ETA_view" />
    <string name="history_num_of_passengers_view" />
    <string name="history_show_route_button">SHOW ROUTE</string>
    <string name="history_message_button">MESSAGE DRIVER</string>
    <string name="route">Route: </string>
    <string name="Date">Date:</string>
    <string name="arrival_time">Arrival Time:</string>
    <string name="tripList_delete_button">Delete Trip</string>
    <string name="tripList_edit_button">Edit Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="cancel">Cancel</string>
    <string name="passenger_list">Passenger List:</string>
    <string name="book_trip">Book Trip</string>
    <string name="available_seats">Available Seats:</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="passengers_address">Passengers Address:</string>
    <string name="driver_history_back_button"><![CDATA[<]]></string>
    <string name="driver_history_title">History</string>
    <string name="history_studentID">StudentID:</string>
    <string name="history_studentID_view" />
    <string name="history_price">Price:</string>
    <string name="history_price_view" />
    <string name="history_plate">PlateNumber:</string>
    <string name="history_plate_view" />
    <string name="driver_history_date">Date</string>
    <string name="driver_history_price">price:</string>
    <string name="driver_history_price_view" />
    <string name="driver_history_pick_up_time">Pickup Time:</string>
    <string name="driver_history_pick_up_time_view" />
    <string name="driver_history_ETA">ETA to Destination:</string>
    <string name="driver_history_ETA_view" />
    <string name="driver_history_passenger">No. of Passengers:</string>
    <string name="driver_history_passenger_view" />
    <string name="driver_history_show_route_button">SHOW ROUTE</string>
    <string name="driver_history_message_button">MESSAGE PASSENGER</string>
    <string name="_0_00">0.00</string>
    <string name="dollar_sign">$</string>
    <string name="pay_user">Pay User</string>
    <string name="title_activity_help_video">HelpVideo</string>
    <string name="title_activity_video_help">VideoHelp</string>
    <string name="credit_to_add">Credit To Add</string>
    <string name="enter_amount_of_credits_you_want_to_add">Enter amount of credits you want to add:</string>
    <string name="saveTrips_title">Save Trips</string>
    <string name="saveTrips_back_button"><![CDATA[<]]></string>
    <string name="save_trip_date">Date</string>
    <string name="save_trip_route">Route:</string>
    <string name="save_trip_ETA">ETA to Destination:</string>
    <string name="save_trip_price">Price:</string>
    <string name="save_trip_seat">Available seats:</string>
    <string name="save_trip_car">Car make and model:</string>
    <string name="save_trip_book_button">BOOK TRIP</string>
    <string name="save_trip_delete_button">DELETE</string>
    <string name="save_trip_route_view" />
    <string name="save_trip_ETA_view" />
    <string name="save_trip_price_view" />
    <string name="save_trip_seat_view" />
    <string name="save_trip_car_view" />
    <string name="driver_history_passenger_list">Passenger List:</string>
</resources>
