<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--<com.google.android.material.card.MaterialCardView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="260dp">-->

    <TextView
            android:id="@+id/save_trip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_date"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/save_trip_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_trip_route"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_date" />

    <TextView
            android:id="@+id/save_trip_ETA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_ETA"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_route_view" />

    <TextView
            android:id="@+id/save_trip_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_ETA" />

    <TextView
            android:id="@+id/save_trip_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_seat"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_price" />

    <TextView
            android:id="@+id/save_trip_route_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_route_view"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toEndOf="@+id/save_trip_route"
            app:layout_constraintTop_toTopOf="@+id/save_trip_route" />

    <TextView
            android:id="@+id/save_trip_ETA_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_ETA_view"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_trip_ETA"
            app:layout_constraintStart_toEndOf="@+id/save_trip_ETA" />

    <TextView
            android:id="@+id/save_trip_price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_price_view"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_trip_price"
            app:layout_constraintStart_toEndOf="@+id/save_trip_price" />

    <TextView
            android:id="@+id/save_trip_seat_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_seat_view"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_trip_seat"
            app:layout_constraintStart_toEndOf="@+id/save_trip_seat" />

    <TextView
            android:id="@+id/save_trip_car_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_car_view"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_trip_car"
            app:layout_constraintStart_toEndOf="@+id/save_trip_car" />

    <Button
            android:id="@+id/save_trip_book_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="#00F5F1F1"
            android:text="@string/save_trip_book_button"
            android:textColor="#16BE12"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_car" />

    <Button
            android:id="@+id/save_trip_delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#00F5F1F1"
            android:text="@string/save_trip_delete_button"
            android:textColor="#F8E01B2B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_trip_book_button"
            app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <TextView
            android:id="@+id/save_trip_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_car"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/save_trip_seat" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55831265" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>-->
