<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".activities.DriverInterface">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:background="#FF5224"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/UniRide-Driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/uniRide_driver"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toTopOf="@+id/header" />

    <Button
            android:id="@+id/createTripButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="25dp"
            android:background="#FF6D1A"
            android:text="@string/create_trip"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/earningsButton"
            app:layout_constraintEnd_toStartOf="@+id/savedTripButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
            android:id="@+id/savedTripButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="25dp"
            android:background="#FF6D1A"
            android:text="@string/saved_trip"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/upcomingTripButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/createTripButton"
            app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
            android:id="@+id/earningsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="25dp"
            android:background="#FF6D1A"
            android:text="@string/earnings"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tripHistoryButton"
            app:layout_constraintEnd_toStartOf="@+id/upcomingTripButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTripButton" />

    <Button
            android:id="@+id/upcomingTripButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="25dp"
            android:background="#FF6D1A"
            android:text="@string/upcoming_trip"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/optionsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/earningsButton"
            app:layout_constraintTop_toBottomOf="@+id/savedTripButton" />

    <Button
            android:id="@+id/optionsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="100dp"
            android:background="#FF6D1A"
            android:text="@string/options"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tripHistoryButton"
            app:layout_constraintTop_toBottomOf="@+id/upcomingTripButton" />

    <Button
            android:id="@+id/tripHistoryButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="100dp"
            android:background="#FF6D1A"
            android:text="@string/trip_history"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/optionsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/earningsButton" />

    <Switch
            android:id="@+id/driverPassengerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/passenger"
            android:textColor="#FFFFFF"
            android:textOff="@string/passenger"
            android:textOn="@string/driver"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/header"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>